src/l2h/l2h.output
Terminals unused in grammar

    INVALID_STRING


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: expressions

    2 expressions: query
    3            | expressions query

    4 query: comment

    5 $@1: %empty

    6 query: $@1 query_expression SEMICOLON

    7 comment: COMMENT

    8 query_expression: from_clause query_body

    9 query_body: opt_query_body_clauses select_or_group_clause query_continuation

   10 opt_query_body_clauses: %empty
   11                       | query_body_clauses

   12 $@2: %empty

   13 query_continuation: INTO identifier $@2 query_body
   14                   | %empty

   15 query_body_clauses: query_body_clause
   16                   | query_body_clauses query_body_clause

   17 query_body_clause: from_clause
   18                  | let_clause
   19                  | where_clause
   20                  | join_clause
   21                  | join_into_clause
   22                  | orderby_clause

   23 from_clause: FROM typedef WITHIN expression

   24 let_clause: LET identifier ASSIGN expression

   25 where_clause: WHERE boolean_expression

   26 join_clause: JOIN typedef WITHIN expression ON expression EQUALS expression

   27 join_into_clause: JOIN typedef WITHIN expression ON expression EQUALS expression INTO identifier

   28 orderby_clause: ORDERBY orderings

   29 orderings: ordering
   30          | orderings COMMA ordering

   31 ordering: expression ordering_direction

   32 ordering_direction: %empty
   33                   | ASCENDING
   34                   | DESCENDING

   35 select_or_group_clause: select_clause
   36                       | group_clause

   37 select_clause: SELECT expression

   38 group_clause: GRP expression BY expression

   39 boolean_expression: conditional_or_expression

   40 conditional_or_expression: conditional_and_expression
   41                          | conditional_or_expression OR conditional_and_expression

   42 conditional_and_expression: not_expression
   43                           | conditional_and_expression AND not_expression

   44 not_expression: exclusive_or_expression
   45               | NOT exclusive_or_expression

   46 exclusive_or_expression: OPEN_PAREN boolean_expression CLOSE_PAREN
   47                        | relational_expr

   48 expression: unary_expression
   49           | anonymous_object
   50           | query_expression

   51 unary_expression: identifier
   52                 | identifier DOT attribute
   53                 | identifier DOT invocation_expression
   54                 | STRING
   55                 | INTEGER

   56 anonymous_object: OPEN_BRACE anonymous_object_initialization CLOSE_BRACE

   57 anonymous_object_initialization: unary_expression
   58                                | anonymous_object_initialization COMMA unary_expression

   59 relational_expr: unary_expression REL_OP unary_expression

   60 identifier: IDENTIFIER

   61 attribute: IDENTIFIER
   62          | TYPE

   63 invocation_expression: IDENTIFIER OPEN_PAREN opt_argument_list CLOSE_PAREN

   64 opt_argument_list: argument_list
   65                  | %empty

   66 argument_list: expression
   67              | argument_list COMMA expression

   68 typedef: type identifier
   69        | identifier

   70 type: TYPE
   71     | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    COMMENT (258) 7
    SEMICOLON (259) 6
    FROM (260) 23
    TYPE <type> (261) 62 70
    LET (262) 24
    ASSIGN (263) 24
    WHERE (264) 25
    ON (265) 26 27
    EQUALS (266) 26 27
    JOIN (267) 26 27
    ORDERBY (268) 28
    COMMA (269) 30 58 67
    ASCENDING <ordering> (270) 33
    DESCENDING <ordering> (271) 34
    SELECT (272) 37
    GRP (273) 38
    BY (274) 38
    OPEN_PAREN (275) 46 63
    CLOSE_PAREN (276) 46 63
    OPEN_BRACE (277) 56
    CLOSE_BRACE (278) 56
    IDENTIFIER <string> (279) 60 61 63 71
    INTEGER <number> (280) 55
    STRING <string> (281) 54
    DOT (282) 52 53
    INVALID_STRING <string> (283)
    LOWER_THAN_INTO (284)
    INTO (285) 13 27
    OR (286) 41
    AND (287) 43
    WITHIN (288) 23 26 27
    NOT (289) 45
    REL_OP <relational_op> (290) 59


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    translation_unit (37)
        on left: 1
        on right: 0
    expressions (38)
        on left: 2 3
        on right: 1 3
    query (39)
        on left: 4 6
        on right: 2 3
    $@1 (40)
        on left: 5
        on right: 6
    comment (41)
        on left: 7
        on right: 4
    query_expression <node> (42)
        on left: 8
        on right: 6 50
    query_body <node> (43)
        on left: 9
        on right: 8 13
    opt_query_body_clauses <node> (44)
        on left: 10 11
        on right: 9
    query_continuation <node> (45)
        on left: 13 14
        on right: 9
    $@2 (46)
        on left: 12
        on right: 13
    query_body_clauses <node> (47)
        on left: 15 16
        on right: 11 16
    query_body_clause <node> (48)
        on left: 17 18 19 20 21 22
        on right: 15 16
    from_clause <node> (49)
        on left: 23
        on right: 8 17
    let_clause <node> (50)
        on left: 24
        on right: 18
    where_clause <node> (51)
        on left: 25
        on right: 19
    join_clause <node> (52)
        on left: 26
        on right: 20
    join_into_clause <node> (53)
        on left: 27
        on right: 21
    orderby_clause <node> (54)
        on left: 28
        on right: 22
    orderings <node> (55)
        on left: 29 30
        on right: 28 30
    ordering <node> (56)
        on left: 31
        on right: 29 30
    ordering_direction <ordering> (57)
        on left: 32 33 34
        on right: 31
    select_or_group_clause <node> (58)
        on left: 35 36
        on right: 9
    select_clause <node> (59)
        on left: 37
        on right: 35
    group_clause <node> (60)
        on left: 38
        on right: 36
    boolean_expression <node> (61)
        on left: 39
        on right: 25 46
    conditional_or_expression <node> (62)
        on left: 40 41
        on right: 39 41
    conditional_and_expression <node> (63)
        on left: 42 43
        on right: 40 41 43
    not_expression <node> (64)
        on left: 44 45
        on right: 42 43
    exclusive_or_expression <node> (65)
        on left: 46 47
        on right: 44 45
    expression <node> (66)
        on left: 48 49 50
        on right: 23 24 26 27 31 37 38 66 67
    unary_expression <node> (67)
        on left: 51 52 53 54 55
        on right: 48 57 58 59
    anonymous_object <node> (68)
        on left: 56
        on right: 49
    anonymous_object_initialization <node> (69)
        on left: 57 58
        on right: 56 58
    relational_expr <node> (70)
        on left: 59
        on right: 47
    identifier <node> (71)
        on left: 60
        on right: 13 24 27 51 52 53 68 69
    attribute <node> (72)
        on left: 61 62
        on right: 52
    invocation_expression <node> (73)
        on left: 63
        on right: 53
    opt_argument_list <node> (74)
        on left: 64 65
        on right: 63
    argument_list <node> (75)
        on left: 66 67
        on right: 64 67
    typedef <node> (76)
        on left: 68 69
        on right: 23 26 27
    type <type> (77)
        on left: 70 71
        on right: 68


State 0

    0 $accept: . translation_unit $end
    1 translation_unit: . expressions
    2 expressions: . query
    3            | . expressions query
    4 query: . comment
    5 $@1: . %empty  [FROM]
    6 query: . $@1 query_expression SEMICOLON
    7 comment: . COMMENT

    COMMENT  shift, and go to state 1

    $default  reduce using rule 5 ($@1)

    translation_unit  go to state 2
    expressions       go to state 3
    query             go to state 4
    $@1               go to state 5
    comment           go to state 6


State 1

    7 comment: COMMENT .

    $default  reduce using rule 7 (comment)


State 2

    0 $accept: translation_unit . $end

    $end  shift, and go to state 7


State 3

    1 translation_unit: expressions .  [$end]
    3 expressions: expressions . query
    4 query: . comment
    5 $@1: . %empty  [FROM]
    6 query: . $@1 query_expression SEMICOLON
    7 comment: . COMMENT

    COMMENT  shift, and go to state 1

    FROM      reduce using rule 5 ($@1)
    $default  reduce using rule 1 (translation_unit)

    query    go to state 8
    $@1      go to state 5
    comment  go to state 6


State 4

    2 expressions: query .

    $default  reduce using rule 2 (expressions)


State 5

    6 query: $@1 . query_expression SEMICOLON
    8 query_expression: . from_clause query_body
   23 from_clause: . FROM typedef WITHIN expression

    FROM  shift, and go to state 9

    query_expression  go to state 10
    from_clause       go to state 11


State 6

    4 query: comment .

    $default  reduce using rule 4 (query)


State 7

    0 $accept: translation_unit $end .

    $default  accept


State 8

    3 expressions: expressions query .

    $default  reduce using rule 3 (expressions)


State 9

   23 from_clause: FROM . typedef WITHIN expression
   60 identifier: . IDENTIFIER
   68 typedef: . type identifier
   69        | . identifier
   70 type: . TYPE
   71     | . IDENTIFIER

    TYPE        shift, and go to state 12
    IDENTIFIER  shift, and go to state 13

    identifier  go to state 14
    typedef     go to state 15
    type        go to state 16


State 10

    6 query: $@1 query_expression . SEMICOLON

    SEMICOLON  shift, and go to state 17


State 11

    8 query_expression: from_clause . query_body
    9 query_body: . opt_query_body_clauses select_or_group_clause query_continuation
   10 opt_query_body_clauses: . %empty  [SELECT, GRP]
   11                       | . query_body_clauses
   15 query_body_clauses: . query_body_clause
   16                   | . query_body_clauses query_body_clause
   17 query_body_clause: . from_clause
   18                  | . let_clause
   19                  | . where_clause
   20                  | . join_clause
   21                  | . join_into_clause
   22                  | . orderby_clause
   23 from_clause: . FROM typedef WITHIN expression
   24 let_clause: . LET identifier ASSIGN expression
   25 where_clause: . WHERE boolean_expression
   26 join_clause: . JOIN typedef WITHIN expression ON expression EQUALS expression
   27 join_into_clause: . JOIN typedef WITHIN expression ON expression EQUALS expression INTO identifier
   28 orderby_clause: . ORDERBY orderings

    FROM     shift, and go to state 9
    LET      shift, and go to state 18
    WHERE    shift, and go to state 19
    JOIN     shift, and go to state 20
    ORDERBY  shift, and go to state 21

    $default  reduce using rule 10 (opt_query_body_clauses)

    query_body              go to state 22
    opt_query_body_clauses  go to state 23
    query_body_clauses      go to state 24
    query_body_clause       go to state 25
    from_clause             go to state 26
    let_clause              go to state 27
    where_clause            go to state 28
    join_clause             go to state 29
    join_into_clause        go to state 30
    orderby_clause          go to state 31


State 12

   70 type: TYPE .

    $default  reduce using rule 70 (type)


State 13

   60 identifier: IDENTIFIER .  [WITHIN]
   71 type: IDENTIFIER .  [IDENTIFIER]

    IDENTIFIER  reduce using rule 71 (type)
    $default    reduce using rule 60 (identifier)


State 14

   69 typedef: identifier .

    $default  reduce using rule 69 (typedef)


State 15

   23 from_clause: FROM typedef . WITHIN expression

    WITHIN  shift, and go to state 32


State 16

   60 identifier: . IDENTIFIER
   68 typedef: type . identifier

    IDENTIFIER  shift, and go to state 33

    identifier  go to state 34


State 17

    6 query: $@1 query_expression SEMICOLON .

    $default  reduce using rule 6 (query)


State 18

   24 let_clause: LET . identifier ASSIGN expression
   60 identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 33

    identifier  go to state 35


State 19

   25 where_clause: WHERE . boolean_expression
   39 boolean_expression: . conditional_or_expression
   40 conditional_or_expression: . conditional_and_expression
   41                          | . conditional_or_expression OR conditional_and_expression
   42 conditional_and_expression: . not_expression
   43                           | . conditional_and_expression AND not_expression
   44 not_expression: . exclusive_or_expression
   45               | . NOT exclusive_or_expression
   46 exclusive_or_expression: . OPEN_PAREN boolean_expression CLOSE_PAREN
   47                        | . relational_expr
   51 unary_expression: . identifier
   52                 | . identifier DOT attribute
   53                 | . identifier DOT invocation_expression
   54                 | . STRING
   55                 | . INTEGER
   59 relational_expr: . unary_expression REL_OP unary_expression
   60 identifier: . IDENTIFIER

    OPEN_PAREN  shift, and go to state 36
    IDENTIFIER  shift, and go to state 33
    INTEGER     shift, and go to state 37
    STRING      shift, and go to state 38
    NOT         shift, and go to state 39

    boolean_expression          go to state 40
    conditional_or_expression   go to state 41
    conditional_and_expression  go to state 42
    not_expression              go to state 43
    exclusive_or_expression     go to state 44
    unary_expression            go to state 45
    relational_expr             go to state 46
    identifier                  go to state 47


State 20

   26 join_clause: JOIN . typedef WITHIN expression ON expression EQUALS expression
   27 join_into_clause: JOIN . typedef WITHIN expression ON expression EQUALS expression INTO identifier
   60 identifier: . IDENTIFIER
   68 typedef: . type identifier
   69        | . identifier
   70 type: . TYPE
   71     | . IDENTIFIER

    TYPE        shift, and go to state 12
    IDENTIFIER  shift, and go to state 13

    identifier  go to state 14
    typedef     go to state 48
    type        go to state 16


State 21

    8 query_expression: . from_clause query_body
   23 from_clause: . FROM typedef WITHIN expression
   28 orderby_clause: ORDERBY . orderings
   29 orderings: . ordering
   30          | . orderings COMMA ordering
   31 ordering: . expression ordering_direction
   48 expression: . unary_expression
   49           | . anonymous_object
   50           | . query_expression
   51 unary_expression: . identifier
   52                 | . identifier DOT attribute
   53                 | . identifier DOT invocation_expression
   54                 | . STRING
   55                 | . INTEGER
   56 anonymous_object: . OPEN_BRACE anonymous_object_initialization CLOSE_BRACE
   60 identifier: . IDENTIFIER

    FROM        shift, and go to state 9
    OPEN_BRACE  shift, and go to state 49
    IDENTIFIER  shift, and go to state 33
    INTEGER     shift, and go to state 37
    STRING      shift, and go to state 38

    query_expression  go to state 50
    from_clause       go to state 11
    orderings         go to state 51
    ordering          go to state 52
    expression        go to state 53
    unary_expression  go to state 54
    anonymous_object  go to state 55
    identifier        go to state 47


State 22

    8 query_expression: from_clause query_body .

    $default  reduce using rule 8 (query_expression)


State 23

    9 query_body: opt_query_body_clauses . select_or_group_clause query_continuation
   35 select_or_group_clause: . select_clause
   36                       | . group_clause
   37 select_clause: . SELECT expression
   38 group_clause: . GRP expression BY expression

    SELECT  shift, and go to state 56
    GRP     shift, and go to state 57

    select_or_group_clause  go to state 58
    select_clause           go to state 59
    group_clause            go to state 60


State 24

   11 opt_query_body_clauses: query_body_clauses .  [SELECT, GRP]
   16 query_body_clauses: query_body_clauses . query_body_clause
   17 query_body_clause: . from_clause
   18                  | . let_clause
   19                  | . where_clause
   20                  | . join_clause
   21                  | . join_into_clause
   22                  | . orderby_clause
   23 from_clause: . FROM typedef WITHIN expression
   24 let_clause: . LET identifier ASSIGN expression
   25 where_clause: . WHERE boolean_expression
   26 join_clause: . JOIN typedef WITHIN expression ON expression EQUALS expression
   27 join_into_clause: . JOIN typedef WITHIN expression ON expression EQUALS expression INTO identifier
   28 orderby_clause: . ORDERBY orderings

    FROM     shift, and go to state 9
    LET      shift, and go to state 18
    WHERE    shift, and go to state 19
    JOIN     shift, and go to state 20
    ORDERBY  shift, and go to state 21

    $default  reduce using rule 11 (opt_query_body_clauses)

    query_body_clause  go to state 61
    from_clause        go to state 26
    let_clause         go to state 27
    where_clause       go to state 28
    join_clause        go to state 29
    join_into_clause   go to state 30
    orderby_clause     go to state 31


State 25

   15 query_body_clauses: query_body_clause .

    $default  reduce using rule 15 (query_body_clauses)


State 26

   17 query_body_clause: from_clause .

    $default  reduce using rule 17 (query_body_clause)


State 27

   18 query_body_clause: let_clause .

    $default  reduce using rule 18 (query_body_clause)


State 28

   19 query_body_clause: where_clause .

    $default  reduce using rule 19 (query_body_clause)


State 29

   20 query_body_clause: join_clause .

    $default  reduce using rule 20 (query_body_clause)


State 30

   21 query_body_clause: join_into_clause .

    $default  reduce using rule 21 (query_body_clause)


State 31

   22 query_body_clause: orderby_clause .

    $default  reduce using rule 22 (query_body_clause)


State 32

    8 query_expression: . from_clause query_body
   23 from_clause: . FROM typedef WITHIN expression
   23            | FROM typedef WITHIN . expression
   48 expression: . unary_expression
   49           | . anonymous_object
   50           | . query_expression
   51 unary_expression: . identifier
   52                 | . identifier DOT attribute
   53                 | . identifier DOT invocation_expression
   54                 | . STRING
   55                 | . INTEGER
   56 anonymous_object: . OPEN_BRACE anonymous_object_initialization CLOSE_BRACE
   60 identifier: . IDENTIFIER

    FROM        shift, and go to state 9
    OPEN_BRACE  shift, and go to state 49
    IDENTIFIER  shift, and go to state 33
    INTEGER     shift, and go to state 37
    STRING      shift, and go to state 38

    query_expression  go to state 50
    from_clause       go to state 11
    expression        go to state 62
    unary_expression  go to state 54
    anonymous_object  go to state 55
    identifier        go to state 47


State 33

   60 identifier: IDENTIFIER .

    $default  reduce using rule 60 (identifier)


State 34

   68 typedef: type identifier .

    $default  reduce using rule 68 (typedef)


State 35

   24 let_clause: LET identifier . ASSIGN expression

    ASSIGN  shift, and go to state 63


State 36

   39 boolean_expression: . conditional_or_expression
   40 conditional_or_expression: . conditional_and_expression
   41                          | . conditional_or_expression OR conditional_and_expression
   42 conditional_and_expression: . not_expression
   43                           | . conditional_and_expression AND not_expression
   44 not_expression: . exclusive_or_expression
   45               | . NOT exclusive_or_expression
   46 exclusive_or_expression: . OPEN_PAREN boolean_expression CLOSE_PAREN
   46                        | OPEN_PAREN . boolean_expression CLOSE_PAREN
   47                        | . relational_expr
   51 unary_expression: . identifier
   52                 | . identifier DOT attribute
   53                 | . identifier DOT invocation_expression
   54                 | . STRING
   55                 | . INTEGER
   59 relational_expr: . unary_expression REL_OP unary_expression
   60 identifier: . IDENTIFIER

    OPEN_PAREN  shift, and go to state 36
    IDENTIFIER  shift, and go to state 33
    INTEGER     shift, and go to state 37
    STRING      shift, and go to state 38
    NOT         shift, and go to state 39

    boolean_expression          go to state 64
    conditional_or_expression   go to state 41
    conditional_and_expression  go to state 42
    not_expression              go to state 43
    exclusive_or_expression     go to state 44
    unary_expression            go to state 45
    relational_expr             go to state 46
    identifier                  go to state 47


State 37

   55 unary_expression: INTEGER .

    $default  reduce using rule 55 (unary_expression)


State 38

   54 unary_expression: STRING .

    $default  reduce using rule 54 (unary_expression)


State 39

   45 not_expression: NOT . exclusive_or_expression
   46 exclusive_or_expression: . OPEN_PAREN boolean_expression CLOSE_PAREN
   47                        | . relational_expr
   51 unary_expression: . identifier
   52                 | . identifier DOT attribute
   53                 | . identifier DOT invocation_expression
   54                 | . STRING
   55                 | . INTEGER
   59 relational_expr: . unary_expression REL_OP unary_expression
   60 identifier: . IDENTIFIER

    OPEN_PAREN  shift, and go to state 36
    IDENTIFIER  shift, and go to state 33
    INTEGER     shift, and go to state 37
    STRING      shift, and go to state 38

    exclusive_or_expression  go to state 65
    unary_expression         go to state 45
    relational_expr          go to state 46
    identifier               go to state 47


State 40

   25 where_clause: WHERE boolean_expression .

    $default  reduce using rule 25 (where_clause)


State 41

   39 boolean_expression: conditional_or_expression .  [FROM, LET, WHERE, JOIN, ORDERBY, SELECT, GRP, CLOSE_PAREN]
   41 conditional_or_expression: conditional_or_expression . OR conditional_and_expression

    OR  shift, and go to state 66

    $default  reduce using rule 39 (boolean_expression)


State 42

   40 conditional_or_expression: conditional_and_expression .  [FROM, LET, WHERE, JOIN, ORDERBY, SELECT, GRP, CLOSE_PAREN, OR]
   43 conditional_and_expression: conditional_and_expression . AND not_expression

    AND  shift, and go to state 67

    $default  reduce using rule 40 (conditional_or_expression)


State 43

   42 conditional_and_expression: not_expression .

    $default  reduce using rule 42 (conditional_and_expression)


State 44

   44 not_expression: exclusive_or_expression .

    $default  reduce using rule 44 (not_expression)


State 45

   59 relational_expr: unary_expression . REL_OP unary_expression

    REL_OP  shift, and go to state 68


State 46

   47 exclusive_or_expression: relational_expr .

    $default  reduce using rule 47 (exclusive_or_expression)


State 47

   51 unary_expression: identifier .  [SEMICOLON, FROM, LET, WHERE, ON, EQUALS, JOIN, ORDERBY, COMMA, ASCENDING, DESCENDING, SELECT, GRP, BY, CLOSE_PAREN, CLOSE_BRACE, INTO, OR, AND, REL_OP]
   52                 | identifier . DOT attribute
   53                 | identifier . DOT invocation_expression

    DOT  shift, and go to state 69

    $default  reduce using rule 51 (unary_expression)


State 48

   26 join_clause: JOIN typedef . WITHIN expression ON expression EQUALS expression
   27 join_into_clause: JOIN typedef . WITHIN expression ON expression EQUALS expression INTO identifier

    WITHIN  shift, and go to state 70


State 49

   51 unary_expression: . identifier
   52                 | . identifier DOT attribute
   53                 | . identifier DOT invocation_expression
   54                 | . STRING
   55                 | . INTEGER
   56 anonymous_object: OPEN_BRACE . anonymous_object_initialization CLOSE_BRACE
   57 anonymous_object_initialization: . unary_expression
   58                                | . anonymous_object_initialization COMMA unary_expression
   60 identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 33
    INTEGER     shift, and go to state 37
    STRING      shift, and go to state 38

    unary_expression                 go to state 71
    anonymous_object_initialization  go to state 72
    identifier                       go to state 47


State 50

   50 expression: query_expression .

    $default  reduce using rule 50 (expression)


State 51

   28 orderby_clause: ORDERBY orderings .  [FROM, LET, WHERE, JOIN, ORDERBY, SELECT, GRP]
   30 orderings: orderings . COMMA ordering

    COMMA  shift, and go to state 73

    $default  reduce using rule 28 (orderby_clause)


State 52

   29 orderings: ordering .

    $default  reduce using rule 29 (orderings)


State 53

   31 ordering: expression . ordering_direction
   32 ordering_direction: . %empty  [FROM, LET, WHERE, JOIN, ORDERBY, COMMA, SELECT, GRP]
   33                   | . ASCENDING
   34                   | . DESCENDING

    ASCENDING   shift, and go to state 74
    DESCENDING  shift, and go to state 75

    $default  reduce using rule 32 (ordering_direction)

    ordering_direction  go to state 76


State 54

   48 expression: unary_expression .

    $default  reduce using rule 48 (expression)


State 55

   49 expression: anonymous_object .

    $default  reduce using rule 49 (expression)


State 56

    8 query_expression: . from_clause query_body
   23 from_clause: . FROM typedef WITHIN expression
   37 select_clause: SELECT . expression
   48 expression: . unary_expression
   49           | . anonymous_object
   50           | . query_expression
   51 unary_expression: . identifier
   52                 | . identifier DOT attribute
   53                 | . identifier DOT invocation_expression
   54                 | . STRING
   55                 | . INTEGER
   56 anonymous_object: . OPEN_BRACE anonymous_object_initialization CLOSE_BRACE
   60 identifier: . IDENTIFIER

    FROM        shift, and go to state 9
    OPEN_BRACE  shift, and go to state 49
    IDENTIFIER  shift, and go to state 33
    INTEGER     shift, and go to state 37
    STRING      shift, and go to state 38

    query_expression  go to state 50
    from_clause       go to state 11
    expression        go to state 77
    unary_expression  go to state 54
    anonymous_object  go to state 55
    identifier        go to state 47


State 57

    8 query_expression: . from_clause query_body
   23 from_clause: . FROM typedef WITHIN expression
   38 group_clause: GRP . expression BY expression
   48 expression: . unary_expression
   49           | . anonymous_object
   50           | . query_expression
   51 unary_expression: . identifier
   52                 | . identifier DOT attribute
   53                 | . identifier DOT invocation_expression
   54                 | . STRING
   55                 | . INTEGER
   56 anonymous_object: . OPEN_BRACE anonymous_object_initialization CLOSE_BRACE
   60 identifier: . IDENTIFIER

    FROM        shift, and go to state 9
    OPEN_BRACE  shift, and go to state 49
    IDENTIFIER  shift, and go to state 33
    INTEGER     shift, and go to state 37
    STRING      shift, and go to state 38

    query_expression  go to state 50
    from_clause       go to state 11
    expression        go to state 78
    unary_expression  go to state 54
    anonymous_object  go to state 55
    identifier        go to state 47


State 58

    9 query_body: opt_query_body_clauses select_or_group_clause . query_continuation
   13 query_continuation: . INTO identifier $@2 query_body
   14                   | . %empty  [SEMICOLON, FROM, LET, WHERE, ON, EQUALS, JOIN, ORDERBY, COMMA, ASCENDING, DESCENDING, SELECT, GRP, BY, CLOSE_PAREN]

    INTO  shift, and go to state 79

    $default  reduce using rule 14 (query_continuation)

    query_continuation  go to state 80

    Conflict between rule 14 and token INTO resolved as shift (LOWER_THAN_INTO < INTO).


State 59

   35 select_or_group_clause: select_clause .

    $default  reduce using rule 35 (select_or_group_clause)


State 60

   36 select_or_group_clause: group_clause .

    $default  reduce using rule 36 (select_or_group_clause)


State 61

   16 query_body_clauses: query_body_clauses query_body_clause .

    $default  reduce using rule 16 (query_body_clauses)


State 62

   23 from_clause: FROM typedef WITHIN expression .
